--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,20 +11,51 @@
  <header>
    <h1 id="title">Paleta de Cores</h1>
  </header>
-   <section id='color-palette'>
-     <div id="paleta1"  class="color squareSize center"></div>
-     <div id="paleta2" class="color squareSize"></div>
-     <div id="paleta3" class="color squareSize"></div>
-     <div id="paleta4" class="color squareSize"></div>
-   </section>
+ <main>
+   <ul id="color-palette">
+     <li class="color squareSize" style="background-color: black;""></li>
+     <li class="color squareSize" style="background-color: green;"></li>
+     <li class="color squareSize" style="background-color: red;"></li>
+     <li class="color squareSize" style="background-color: blue;"></li>
+   </ul>
    <section id="pixel-board">
-    <div class="line"></div>
-    <div class="line"></div>
-    <div class="line"></div>
-    <div class="line"></div>
-    <div class="line"></div>
+      <div class="line">
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+      </div>
+      <div class="line">
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+      </div>
+      <div class="line">
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+      </div>
+      <div class="line">
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+      </div>
+      <div class="line">
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+      </div>
    </section>
-   
+ </main>
 
 <script src="script.js"></script>  
 </body>
