--- a/index.html
+++ b/index.html
@@ -4,9 +4,97 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 id="title">Paleta de Cores</h1>
-    
+    <header>
+        <h1 id="title">Paleta de Cores</h1>
+    </header>
+    <div id="color-palette">
+            <div class="color color1"></div>
+            <div class="color color2"></div>
+            <div class="color color3"></div>
+            <div class="color color4"></div>
+    </div><br>
+    <div class="square">
+        <div id="pixel-board">
+            <div class="pixel"></div>
+        </div>
+        <div id="pixel-board">
+            <div class="pixel"></div>
+        </div>
+        <div id="pixel-board">
+            <div class="pixel"></div>
+        </div>
+        <div id="pixel-board">
+            <div class="pixel"></div>
+        </div>
+        <div id="pixel-board">
+            <div class="pixel"></div>
+        </div><br>
+        <div id="pixel-board">
+            <div class="pixel"></div>
+        </div>
+        <div id="pixel-board">
+            <div class="pixel"></div>
+        </div>
+        <div id="pixel-board">
+            <div class="pixel"></div>
+        </div>
+        <div id="pixel-board">
+            <div class="pixel"></div>
+        </div>
+        <div id="pixel-board">
+            <div class="pixel"></div>
+        </div><br>
+        <div id="pixel-board">
+            <div class="pixel"></div>
+        </div>
+        <div id="pixel-board">
+            <div class="pixel"></div>
+        </div>
+        <div id="pixel-board">
+            <div class="pixel"></div>
+        </div>
+        <div id="pixel-board">
+            <div class="pixel"></div>
+        </div>
+        <div id="pixel-board">
+            <div class="pixel"></div>
+        </div><br>
+        <div id="pixel-board">
+            <div class="pixel"></div>
+        </div>
+        <div id="pixel-board">
+            <div class="pixel"></div>
+        </div>
+        <div id="pixel-board">
+            <div class="pixel"></div>
+        </div>
+        <div id="pixel-board">
+            <div class="pixel"></div>
+        </div>
+        <div id="pixel-board">
+            <div class="pixel"></div>
+        </div><br>
+        <div id="pixel-board">
+            <div class="pixel"></div>
+        </div>
+        <div id="pixel-board">
+            <div class="pixel"></div>
+        </div>
+        <div id="pixel-board">
+            <div class="pixel"></div>
+        </div>
+        <div id="pixel-board">
+            <div class="pixel"></div>
+        </div>
+        <div id="pixel-board">
+            <div class="pixel"></div>
+        </div>
+    </div>
+
+
 </body>
+<script src="script.js"></script>
 </html>
