--- a/index.html
+++ b/index.html
@@ -8,8 +8,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 id="title">Paleta de Cores</h1>
-
+    <header>
+        <h1 id="title">Paleta de Cores</h1>
+    </header>
+    <section id="color-palette">
+        <div id='red' class="color"></div>
+        <div id='yellow' class="color"></div>
+        <div id='green' class="color"></div>
+        <div id='blue' class="color"></div>
+    </section>
     <script src="script.js"></script>
 </body>
 </html>
