--- a/index.html
+++ b/index.html
@@ -2,9 +2,19 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
     <title>Projeto</title>
 </head>
 <body>
     <h1 id = "title">Paleta de Cores</h1>
+    <section>
+        <div id="color-palette">
+            <div class="color" id="blue">teste</div>
+            <div class="color" id="red">teste</div>
+            <div class="color" id="yellow">teste</div>
+            <div class="color" id="purple">teste</div>
+        </div>
+    </section>
+    <script src="script.js"></script>
 </body>
 </html>
