creater board com js, preset color e 'borracha'

--- a/index.html
+++ b/index.html
@@ -10,12 +10,19 @@
 <body>
     <h1 id="title">Paleta de Cores</h1>
     <section id="color-palette">
-        <div id="laranja" class="color"></div>
-        <div id="marrom" class="color"></div>
-        <div id="verde-claro" class="color"></div>
-        <div id="verde-escuro" class="color"></div>
-        <div id="preto" class="color"></div>
+        <div id="preto" class="color preto"></div>
+        <div id="laranja" class="color marrom"></div>
+        <div id="marrom" class="color laranja"></div>
+        <div id="verde-claro" class="color verde-claro"></div>
     </section>
+    <section id="pixel-board">
+        <div class="line-pixel"></div>
+        <div class="line-pixel"></div>
+        <div class="line-pixel"></div>
+        <div class="line-pixel"></div>
+        <div class="line-pixel"></div>
+    </section>
+
     <script src="script.js"></script>
 </body>
 </html>
