--- a/index.html
+++ b/index.html
@@ -11,22 +11,22 @@
   <header>
     <h1 id="title">Paleta de Cores</h1>
   </header>
-  <div id = color-palette>
-    <div class="color selected" id='black'>
+  <main>
+    <div id = color-palette>
+      <button class="color selected" id='black'>
 
-    </div>
-    <div class="color" id='red'>
+      </button>
+      <button class="color" id='red'>
 
-    </div>
-    <div class="color" id='blue'>
+      </button>
+      <button class="color" id='blue'>
 
-    </div>
-    <div class="color" id='green'>
-    </div>
-  </div>
-  <div>
-
-  </div>
+      </button>
+      <button class="color" id='green'>
+      </button>
+   </div>
+   <div id="pixel-board"></div>
+  </main>
   <script src="script.js"></script>
 </body>
 </html>
