--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		<div class="blue color"></div>
 		<div class="orange color"></div>
 	</section>
+	<button id="clear-board">Limpar</button>
 	<section id="pixel-board">
 		<div class="pixel"></div>
 		<div class="pixel"></div>
