--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1 id="title">Paleta de Cores</h1>
     </header>
     <section id="color-palette">
-        <div id='red' class="color"></div>
+        <div id='black' class="color"></div>
         <div id='yellow' class="color"></div>
         <div id='green' class="color"></div>
         <div id='blue' class="color"></div>
