adding id=vqv on reset button

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </section>
                 <section>
                     <input type="number" name="area" id="generate-board">
-                    <button>VQV</button>
+                    <button id="vqv">VQV</button>
                 </section>
             </article>
             <article class="canvas-article">
