adicionando requisitos obrigatorios

--- a/index.html
+++ b/index.html
@@ -11,20 +11,23 @@
 
 <body>
   <header>
-    
+
   </header>
   <main>
     <section id='selectColor'>
       <ul id='color-palette'>
-        <li class='color selected'></li>
-        <li class='color'></li>
-        <li class='color'></li>
-        <li class='color'></li>
+        <li id='black' class='color selected'></li>
+        <li id='red' class='color'></li>
+        <li id='pink' class='color'></li>
+        <li id='green' class='color'></li>
       </ul>
     </section>
+    <button id='clear-board'>Limpar</button>
     <div id='pixel-board'>
 
     </div>
+
+
   </main>
 
   <script src="script.js">
