--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                     <button class="btn">Limpar</button>
                 </section>
                 <section>
-                    <input type="number" name="area" id="generate-board">
-                    <button id="vqv">VQV</button>
+                    <input type="number" name="area" id="board-size">
+                    <button id="generate-board">VQV</button>
                 </section>
             </article>
             <article class="canvas-article">
