Requisito 9 - Botao limpar

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
 
     <div id="pixel-board"></div>
 
+    <div id="btn-div">
+        <button class="btn-clear">Limpar</button>
+    </div>
+
     <script src="./script.js"></script>
 </body>
 
