--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="color-palette">
         <div class="color selected" id="black"></div>
         <div class="color" id="red"></div>
-        <div class="color" id="grenn"></div>
+        <div class="color" id="green"></div>
         <div class="color" id="yellow"></div>
     </div>
     <div id="pixel-board">
