--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
       <h1 id="title">Paleta de Cores</h1>
       <div id="color-palette"></div>
+      <div id="pixel-board"></div>
   </body>
    <script src = "script.js"></script>
 </html>
