limiting board-size to only positive number

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <button class="btn">Limpar</button>
                 </section>
                 <section>
-                    <input type="number" name="area" id="board-size">
+                    <input type="number" name="area" min="1" id="board-size">
                     <button id="generate-board">VQV</button>
                 </section>
             </article>
