--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <body>
     <h1 id="title">Paleta de Cores</h1>
     <div id="color-palette">
-      <div class="color selected">black</div>
-      <div class="color">red</div>
-      <div class="color">blue</div>
-      <div class="color">green</div>
+      <div class="color selected"></div>
+      <div class="color"></div>
+      <div class="color"></div>
+      <div class="color"></div>
     </div>
     <input type="number" id="board-size" min="0">
     <input type="submit">
