--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <body>
     <h1 id="title">Paleta de Cores</h1>
     
-    <div id="color-palette"></div>
+    <div id="color-palette">
         <div class="color" id="black"></div>
         <div class="color" id="red"></div>
         <div class="color" id="green"></div>
         <div class="color" id="blue"></div>
-
+    </div>
 
         
     <script src="script.js"></script>
