--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
       <div class="color"></div>
       <div class="color"></div>
     </section>
+
+    <section id="pixel-board">
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+    </section>
   </main>
 
 </body>
