--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
  </header>
  <main>
    <ul id="color-palette">
-     <li class="color squareSize" style="background-color: black;""></li>
-     <li class="color squareSize" style="background-color: green;"></li>
-     <li class="color squareSize" style="background-color: red;"></li>
-     <li class="color squareSize" style="background-color: blue;"></li>
+     <li id="palettOne" class="color squareSize selected"></li>
+     <li id="palettTwo"  class="color squareSize"</li>
+     <li id="palettThree"  class="color squareSize"></li>
+     <li id="palettFour"  class="color squareSize"></li>
    </ul>
    <section id="pixel-board">
       <div class="line">
