--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
       <div id="paletablue" class="color"></div>
     </div>
 
+    <div id="pixel-board"></div>
+  
   </main>
   
 <script src="script.js"></script>
