--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
       <div class="color"></div>
       <div class="color"></div>
     </div>
-    <input type="number" id="board-size" min="0">
-    <input type="submit">
-    <button id="generate-board">VQV</button>
+    <!-- ref: Obj: input attributes Src:https://www.w3schools.com/tags/tag_input.asp -->
+    <input type="number" id="board-size" min="1">
+    <button type="submit" id="generate-board">VQV</button>
     <button id="clear-board">Limpar</button>
     <div id="pixel-board">
     </div>
