--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
   <div class="cred color"></div>
   <div class="cgreen color"></div>
 </div>
+<input type='number' min"1" id='board-size' placeholder="Tamanho">
+<button id="generate-board">VQV</button>
 <button id="clear-board">Limpar</button>
 <div id="pixel-board">
   <div id="linePixels">
@@ -56,6 +58,7 @@
 
 
 </div>
+
   </main>
   <script src="script.js"></script>
 </body>
