Requisito 7 Lint OK

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <button class="color"></button>
       <button class="color"></button>
     </section>
-    <div id="pixel-board">
+    <div id="pixel-board" class="nda">
       <section class="line"></section>
       <section class="line"></section>
       <section class="line"></section>
