até o 9 tudo OK

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Paleta de Cores</title>
+    <title>Pixel Art</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="/favicon.png" type="image/png">  
 </head>
@@ -29,18 +29,18 @@
 
 <!--    REQUISITOS
 OK  1. Título:  h1 com id='title' e texto "Paleta de Cores"
-~   2. Paleta de cores: elemento id='color-palette' contendo elementos class='color'
+OK   2. Paleta de cores: elemento id='color-palette' contendo elementos class='color'
         * cor proibida "white"
         * borda sólida preta com 1px
         * cores lado a lado abaixo do título
         * proibído cores repetidas
 OK  3. Cores: a primeira tem que ser "black"
-~   4. Quadro: 25 elementos (inicialmente)
+OK  4. Quadro: 25 elementos (inicialmente)
         * 5 elementos por 5 elementos
         * quadro id='pixel-board' pixel class='pixel'
         * pixel precisam ser inicialmente "white"
         * quadro abaixo da paleta de cores
-?   5. 'pixel' com 40x40px incluindo borda e borda 1px 'black'
+OK  5. 'pixel' com 40x40px incluindo borda e borda 1px 'black'
 OK  6. 'black' deve ser a cor inicial
         * O elemento do 'black' tem class='selected'
     7. A class='selected' deve habitar apenas 1 elemento por vez
@@ -66,3 +66,5 @@ OK  9. Botão id='clear-board' que pinta todo o quadro de 'white'
         * Mantendo a primeira sempre como preta
 
   -->
+
+  <!-- Não esqueça a linha em branco no fim do arquivo -->
