Quinto e sexto requisitos concluidos

--- a/index.html
+++ b/index.html
@@ -11,89 +11,38 @@
         <h1 id="title">Paleta de Cores</h1>
     </header>
     <div id="color-palette">
-            <div class="color color1"></div>
+            <div class="color color1 selected"></div>
             <div class="color color2"></div>
             <div class="color color3"></div>
             <div class="color color4"></div>
     </div><br>
-    <div class="square">
-        <div id="pixel-board">
-            <div class="pixel"></div>
-        </div>
-        <div id="pixel-board">
-            <div class="pixel"></div>
-        </div>
-        <div id="pixel-board">
-            <div class="pixel"></div>
-        </div>
-        <div id="pixel-board">
-            <div class="pixel"></div>
-        </div>
-        <div id="pixel-board">
-            <div class="pixel"></div>
-        </div><br>
-        <div id="pixel-board">
-            <div class="pixel"></div>
-        </div>
-        <div id="pixel-board">
-            <div class="pixel"></div>
-        </div>
-        <div id="pixel-board">
-            <div class="pixel"></div>
-        </div>
-        <div id="pixel-board">
-            <div class="pixel"></div>
-        </div>
-        <div id="pixel-board">
-            <div class="pixel"></div>
-        </div><br>
-        <div id="pixel-board">
-            <div class="pixel"></div>
-        </div>
-        <div id="pixel-board">
-            <div class="pixel"></div>
-        </div>
-        <div id="pixel-board">
-            <div class="pixel"></div>
-        </div>
-        <div id="pixel-board">
-            <div class="pixel"></div>
-        </div>
-        <div id="pixel-board">
-            <div class="pixel"></div>
-        </div><br>
-        <div id="pixel-board">
-            <div class="pixel"></div>
-        </div>
-        <div id="pixel-board">
-            <div class="pixel"></div>
-        </div>
-        <div id="pixel-board">
-            <div class="pixel"></div>
-        </div>
-        <div id="pixel-board">
-            <div class="pixel"></div>
-        </div>
-        <div id="pixel-board">
-            <div class="pixel"></div>
-        </div><br>
-        <div id="pixel-board">
-            <div class="pixel"></div>
-        </div>
-        <div id="pixel-board">
-            <div class="pixel"></div>
-        </div>
-        <div id="pixel-board">
-            <div class="pixel"></div>
-        </div>
-        <div id="pixel-board">
-            <div class="pixel"></div>
-        </div>
-        <div id="pixel-board">
-            <div class="pixel"></div>
-        </div>
+    <div id="pixel-board">
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div><br>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div><br>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div><br>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div><br>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
     </div>
-
 
 </body>
 <script src="script.js"></script>
