Inicio da resolucao dos exercicios bonus, problemas no requisito 10 a rever

--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
         <div class = 'color blue'></div>
         <div class = 'color green'></div>
       </div>
-      <button id="clear-board">Limpar</button>
+      <div id="btn-container">
+        <button id="clear-board">Limpar</button>
+        <input id="board-size" type="number">
+        <button id="generate-board">VQV</button>
+      </div>
       <div id="pixel-board"></div>
       <script src="script.js"></script>
   </body>
