--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-    <h1 id="title">Paleta de Cores</h1>
+    <h1 id="title">"Paleta de Cores"</h1>
 
   </header>
   <main>
@@ -20,7 +20,7 @@
       <div class="color random2"></div>
       <div class="color random3"></div>
     </section>
-
+      <div id='pixel-board' class="container"></div>
 
   </main>
   <footer>
