--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1 id="title">Paleta de Cores</h1>
 
     <div id="color-palette">
-        <div class="color" id="black"></div>
+        <div class="color selected" id="black"></div>
         <div class="color" id="red"></div>
         <div class="color" id="green"></div>
         <div class="color" id="blue"></div>
@@ -22,7 +22,7 @@
     <div id="pixel-board"></div>
 
     <div id="btn-div">
-        <button class="btn-clear">Limpar</button>
+        <button id="clear-board">Limpar</button>
     </div>
 
     <script src="./script.js"></script>
