--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
         <div class="pixel"></div>
         <div class="pixel"></div>
         <div class="pixel"></div>
-    </div>
+      </div>
   </div>
- <script type="text/javascript" src="script.js"></script>
+ <script src="script.js"></script>
 </body>
 </html>
