--- a/index.html
+++ b/index.html
@@ -10,11 +10,19 @@
 <body>
     <h1 id="title">Paleta de Cores</h1>
     <div id="color-palette">
-        <div class="color selected" id="black"></div>
-        <div class="color" id="red"></div>
-        <div class="color" id="green"></div>
-        <div class="color" id="yellow"></div>
+        <div class="color selected" id="color1"></div>
+        <div class="color" id="color2"></div>
+        <div class="color" id="color3"></div>
+        <div class="color" id="color4"></div>
     </div>
+    <!-- Encontreia  utilização do form no link seguinte do W3schools -->
+    <!-- link: https://www.w3schools.com/html/html_forms.asp -->
+    <form>
+        <label for="board-size">Tamanho do Quadro:</label>
+        <input type="number" id="board-size" max="50" min="1">
+    </form>
+    <button id="generate-board">VQV</button>
+    <button id="clear-board">Limpar</button>
     <div id="pixel-board">
         <div class="pixel"></div>
         <div class="pixel"></div>
