--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <h1 id="title">Paleta de Cores</h1>
   <div id="color-palette"></div>
-  <div class="quadro"></div>
+  <div id="pixel-board"></div>
   <script src="script.js"></script>
 </body>
 </html>
