--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
     <div class="color corGreen"></div>
     <div class="color corYellow"></div>
   </div>
-
+  <br>
+  <button type="button" id="clear-board">Limpar</button>
+<!-- procurei como fazer botão no site: https://www.w3schools.com/tags/tag_button.asp -->
+  <br><br>
   <div id="pixel-board">
     <div class="pixel"></div>
     <div class="pixel"></div>
