fiz o quadro de pixels

--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="bt-br">
   <head>
-  <meta charset="UTF-8">
-  <title>Project Pixels Art</title>
-  <link rel="stylesheet" type="text/css" href="style.css">
-      
+    <meta charset="UTF-8">
+    <title>Project Pixels Art</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
     <h1 id="title">Paleta de Cores</h1>
@@ -13,12 +12,33 @@
       <div class="color" id="secondColor"></div>
       <div class="color" id="thirdColor"></div>
       <div class="color" id="fourthColor"></div>
-      <div class="color" id="fifthColor"></div>
-      <div class="color" id="sixthColor"></div>
-      <div class="color" id="seventhColor"></div>
-      <div class="color" id="eighthColor"></div>
-      <div class="color" id="ninthColor"></div>
-      <div class="color" id="tenthColor"></div>
+    </section>
+    <section id="pixel-board">
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
     </section>
     <script src="script.js"></script>
   </body>
