--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <div class="color"></div>
         <div class="color"></div>
     </div>
+    <button id="clear-board">Limpar</button>
     <div id="pixel-board">
     </div>
     <script src="script.js"></script>
