Requisito 9 Lint OK

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <button class="color"></button>
       <button class="color"></button>
     </section>
+    <button id="clear-board">Limpar</button>
     <div id="pixel-board" class="nda">
       <section class="line"></section>
       <section class="line"></section>
