Criadas funções para selecionar, criar pixels

--- a/index.html
+++ b/index.html
@@ -10,41 +10,15 @@
     <h1 id=title > Paleta de Cores</h1>
 
     <div id=color-palette > 
-      <div class="color black"></div>
+      <div class="color black "></div>
       <div class="color red"></div>
       <div class="color orange"></div>
       <div class="color blue"></div>
     </div>
 
 
-    <div id=pixel-board >
-        <div class="pixel"></div>
-        <div class="pixel"></div> 
-        <div class="pixel"></div> 
-        <div class="pixel"></div> 
-        <div class="pixel"></div> 
-        <div class="pixel"></div>
-        <div class="pixel"></div> 
-        <div class="pixel"></div> 
-        <div class="pixel"></div> 
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div> 
-        <div class="pixel"></div> 
-        <div class="pixel"></div> 
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div> 
-        <div class="pixel"></div> 
-        <div class="pixel"></div> 
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div> 
-        <div class="pixel"></div> 
-        <div class="pixel"></div> 
-        <div class="pixel"></div>
-        
-    </div>
-  </body>
+    <div id=pixel-board ></div>  
 
+  </body>
+  <script src="script.js"></script>
   </html>
