--- a/index.html
+++ b/index.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Paleta de Cores</title>
+    <h1 id="title">Paleta de Cores</h1>
 </head>
 <body>
+    <div id="color-palette">
+        <div id="paleta1" class="color"></div>
+        <div id="paleta2" class="color"></div>
+        <div id="paleta3" class="color"></div>
+        <div id="paleta4" class="color"></div>
+    </div>
+    <div id= "pixel-board">
+
+    </div>
     
+    <script src="script.js"></script>
 </body>
 </html>
