--- a/index.html
+++ b/index.html
@@ -15,7 +15,36 @@
 
 <body>
   <main>
-    <section>
+    <div id="pixel-board">
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+
+
+    </div>
+    <section id="select-color">
       <ul id="color-palette">
         <li class="color" id="bk"></li>
         <li class="color" id="g"></li>
@@ -24,6 +53,7 @@
       </ul>
       <ul>
     </section>
+    </div>
   </main>
   <script src=" script.js">
   </script>
