até o bonus tudo 100% - agora falta o linter e o estilo pra ficar top

--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
             <div id='color-palette'></div>
         </section>
         <section>
+            <input id="board-size" type="number" min="1">
+            <button id="generate-board">#VQV</button>
             <button id='clear-board'>Limpar</button>
         </section>
-        <section >
+        <section>
             <div id='pixel-board'></div>
         </section>
     </main>
