--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <div class="color"></div>
     <div class="color"></div>
   </header>
+  <div class="buttons"></div>
+  <br>
   <section id="pixel-board">
     <div class="line">
       <div class="pixel"></div>
