Requisitos 1 ao 8 prontos

--- a/index.html
+++ b/index.html
@@ -13,16 +13,20 @@
 </head>
 
 <body>
-    <h1>Paleta de Cores</h1>
+    <h1 id="title">Paleta de Cores</h1>
 
     <section>
         <div id="color-palette">
-            <div class="color firstColor"></div>
+            <div id="firstColor" class="color selected"></div>
             <div class="color randomColors"></div>
             <div class="color randomColors"></div>
             <div class="color randomColors"></div>
         </div>
     </section>
+
+    <div id="button-div">
+        <button id="clear-board">Limpar</button>
+    </div>
 
     <main>
         <div id="pixel-board">
