Todos os requisitos feitos até o 9 / Faltando os bônus e lint

--- a/index.html
+++ b/index.html
@@ -9,15 +9,17 @@
   <body>
     <h1 id=title > Paleta de Cores</h1>
 
-    <div id=color-palette > 
+    <div id=color-palette class=palette> 
       <div class="color black "></div>
       <div class="color red"></div>
       <div class="color orange"></div>
       <div class="color blue"></div>
     </div>
-
+    <button id='clear-board'> Limpar</button>
 
     <div id=pixel-board ></div>  
+
+  
 
   </body>
   <script src="script.js"></script>
