--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         <div class="color blue"></div>
         <div class="color green"></div>
       </div>
+      
+      <button id="clear-board">Limpar</button>
+
       <div id="pixel-board"> 
         <div class="pixel"> </div>
         <div class="pixel"> </div>
