--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- Requisito 1 -->
   <h1 id="title">Paleta de Cores</h1>
-  
+
   <section id="color-palette">
     <div class="color black"></div>
     <div class="color red"></div>
     <div class="color blue"></div>
     <div class="color green"></div>
   </section>
+
+  <main class="main-content"></main>  
     
   <script src="script.js"></script>
 </body>
