--- a/index.html
+++ b/index.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Pixels Art</title>
-        <link rel="stylesheet" href="style.css">
-    </head>
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pixels Art</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
 
-    <body>
-        <h1 id="title">Paleta de Cores</h1>
-        <script src="script.js"></script>
-    </body>
+  <body>
+    <h1 id="title">Paleta de Cores</h1>
+    <div id="color-palette"></div>
+    <button id="clear-board">Limpar</button>
+    <input type="number" placeholder='0' id="board-size" min="1" oninput="validity.valid||(value='');">
+    <button id="generate-board">VQV</button>
+    <div id="pixel-board"></div>
+    <script src="script.js"></script>
+    <script src="utils.js"></script>
+  </body>
 
 </html>
