--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </div>
       <div id="btn-container">
         <button id="clear-board">Limpar</button>
-        <input id="board-size" type="number">
+        <input id="board-size" type="number" max="50" min="1">
         <button id="generate-board">VQV</button>
       </div>
       <div id="pixel-board"></div>
