--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>Paleta de Cores</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
+
 <body>
     <header>
         <h1 id="title">Paleta de Cores</h1>
@@ -18,7 +20,50 @@
         <li class="color"></li>
         <li class="color"></li>
     </ul>
+    <section id="id-button-resetar"></section>
+    <section id="pixel-board">
+        <ul>
+            <li>
+                <li class="pixel"></li>
+                <li class="pixel"></li>
+                <li class="pixel"></li>
+                <li class="pixel"></li>
+                <li class="pixel"></li>
+            </li>
+            <li>
+                <li class="pixel"></li>
+                <li class="pixel"></li>
+                <li class="pixel"></li>
+                <li class="pixel"></li>
+                <li class="pixel"></li>
+            </li>
 
+            <li>
+                <li class="pixel"></li>
+                <li class="pixel"></li>
+                <li class="pixel"></li>
+                <li class="pixel"></li>
+                <li class="pixel"></li>
+            </li>
+
+            <li>
+                <li class="pixel"></li>
+                <li class="pixel"></li>
+                <li class="pixel"></li>
+                <li class="pixel"></li>
+                <li class="pixel"></li>
+            </li>
+
+            <li>
+                <li class="pixel"></li>
+                <li class="pixel"></li>
+                <li class="pixel"></li>
+                <li class="pixel"></li>
+                <li class="pixel"></li>
+            </li>
+        </ul>
+    </section>
 </body>
 <script src="script.js"></script>
+
 </html>
