change index and style

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <header>
         <h1 id="title">Paleta de Cores</h1>
     </header>
+    <main>
         <div id="color-palette">
             <div class="color selected"></div>
             <div class="color paleta-2-Bg"></div>
@@ -57,6 +58,7 @@
                 <div class="pixel"></div>
             </div>
         </div>
+    </main>
     <script src="script.js"></script>
 </body>
 
