--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <main>
 
     <section id="color-palette">
-      <div class="color first-color"></div>
+      <div class="color first-color selected"></div>
       <div class="color random1"></div>
       <div class="color random2"></div>
       <div class="color random3"></div>
