--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
   <body>
       <h1 npm id = 'title'>Paleta de Cores</h1>
       <div id = 'color-palette'>
-        <div class = 'color black selected'></div>
-        <div class = 'color red'></div>
-        <div class = 'color blue'></div>
-        <div class = 'color green'></div>
+        <div class = 'color selected'></div>
+        <div class = 'color'></div>
+        <div class = 'color'></div>
+        <div class = 'color'></div>
       </div>
       <div id="btn-container">
         <button id="clear-board">Limpar</button>
-        <input id="board-size" type="number" max="50" min="1">
+        <input id="board-size" type="number" min="5" max="50">
         <button id="generate-board">VQV</button>
       </div>
       <div id="pixel-board"></div>
