--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
 </head>
 <body>
     <h1 id="title">Paleta de Cores</h1>
-    <div id="color-palette" >
-    </div>
-    <div id="pixel-board">  
-    </div>
+    <div id="color-palette" ></div>
+    <button id="clear-board">Limpar</button>
+    <div id="pixel-board"></div>
     <script src = "script.js" ></script>
 </body>
 </html>
