--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <h1 id="title">Paleta de Cores</h1>
 
     <div id="color-palette">
-        <div class="color selected" id="black"></div>
-        <div class="color" id="red"></div>
-        <div class="color" id="green"></div>
-        <div class="color" id="blue"></div>
+        <div class="color selected" id="firstColor"></div>
+        <div class="color" id="secondColor"></div>
+        <div class="color" id="thirdColor"></div>
+        <div class="color" id="fourtColor"></div>
     </div>
 
     <div id="btn-div">
