--- a/index.html
+++ b/index.html
@@ -10,8 +10,13 @@
   <header>
     <h1 id="title">Paleta de Cores</h1>
   </header>
-  <div>
-  </div>
+  <section id="color-palette">
+        <div class="color selected" id="black"></div> <!--Requisito 6-->
+        <div class="color" id="red"></div>
+        <div class="color" id="blue"></div>
+        <div class="color" id="yellow"></div>
+  </section>
   <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
+
