--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,12 +9,15 @@
 </head>
 <body>
   <h1 id="title">Paleta de Cores</h1>
-  <button id="color-button">Mudar Cores</button>  
-  <div id="color-palette">
-    <div class="color"></div>
-    <div class="color"></div>
-    <div class="color"></div>
-    <div class="color"></div>
+  <div id="container-palette">
+    <div id="color-palette">
+      <div class="color"></div>
+      <div class="color"></div>
+      <div class="color"></div>
+      <div class="color"></div>
+      </div>
+    <button id="color-button">Mudar Cores</button>
+    <button id="clear-board">Limpar</button>
   </div>
 
   <div id="pixel-board">
