--- a/index.html
+++ b/index.html
@@ -10,8 +10,14 @@
 <body>
     <h1 id="title">Paleta de Cores</h1>
     <div id="color-palette" ></div>
+<section id="inputs-content">
     <button id="clear-board">Limpar</button>
+    <input id="board-size" type="number" min="1">
+    <button id="generate-board">VQV</button>
+</section>
+<div id="board-center">
     <div id="pixel-board"></div>
+</div>
     <script src = "script.js" ></script>
 </body>
 </html>
