--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
   <meta charset="UTF-8">
@@ -27,15 +27,9 @@
     </section>
 
     <section id="pixel-board">
-      <div class="pixel"></div>
-      <div class="pixel"></div>
-      <div class="pixel"></div>
-      <div class="pixel"></div>
-      <div class="pixel"></div>
     </section>
   </main>
 
+  <script src="script.js"></script>
 </body>
-<script src="script.js"></script>
-
 </html>
