--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
     <section id="color-palette"> 
     
-        <div id='red' class=' color width-and-height'> </div>
+        <div id='black' class=' color width-and-height'> </div>
         <div  id='green' class='color width-and-height'> </div>
         <div  id='blue' class='color width-and-height'> </div>
         <div  id='purple' class='color width-and-height'> </div>
