--- a/index.html
+++ b/index.html
@@ -23,8 +23,36 @@
             <div class='color' id='c3'></div>
             <div class='color' id='c4'></div>
             </div>
+        <div id='pixel-board'>
+            <div class='pixel'></div>
+            <div class='pixel'></div>
+            <div class='pixel'></div>
+            <div class='pixel'></div>
+            <div class='pixel'></div>
+            <div class='pixel'></div>
+            <div class='pixel'></div>
+            <div class='pixel'></div>
+            <div class='pixel'></div>
+            <div class='pixel'></div>
+            <div class='pixel'></div>
+            <div class='pixel'></div>
+            <div class='pixel'></div>
+            <div class='pixel'></div>
+            <div class='pixel'></div>
+            <div class='pixel'></div>
+            <div class='pixel'></div>
+            <div class='pixel'></div>
+            <div class='pixel'></div>
+            <div class='pixel'></div>
+            <div class='pixel'></div>
+            <div class='pixel'></div>
+            <div class='pixel'></div>
+            <div class='pixel'></div>
+            <div class='pixel'></div>
+        </div>
     </main>
     <footer></footer>
+    <script src="script.js"></script>
 </body>
 
 </html>
