--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>Document</title>
+  <title>Pixel-Art</title>
 </head>
 <body>
     <h1 id='title'>Paleta de Cores</h1>
   <div id='color-palette'>
-    <div id="palette1" class="color"></div>
-    <div id="palette2" class="color"></div>
-    <div id="palette3" class="color"></div>
-    <div id="palette4" class="color"></div>
+    <div class="color black selected"></div>
+    <div class="color color1"></div>
+    <div class="color color2"></div>
+    <div class="color color3"></div>
   </div>
  <div id="pixel-board">
    <div class="line"></div>
