--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
   <main>
 
     <section id="color-palette">
-      <div class="color first-color selected"></div>
-      <div class="color random1"></div>
-      <div class="color random2"></div>
-      <div class="color random3"></div>
+      <div class="color selected"></div>
+      <div class="color"></div>
+      <div class="color"></div>
+      <div class="color"></div>
     </section>
       <div id='pixel-board' class="container"></div>
 
