--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
       <div class="color"></div>
       <div class="color"></div>
     </div>
+
+    <div id="pixel-board"></div>
   </main>
   <script src="script.js"></script>
 </body>
