requisito nove concluido

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <body>
   <h1 id="title">Paleta de Cores</h1>
   
-  <main>
+  <main id="conteudoPrincipal">
     <section>
       <div id="color-palette">
 
       </div>
     </section>
-    
+
     <section>
       <div id="pixel-board">
 
