--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class='color' id='c4'></div>
             </div>
         <div id='pixel-board'>
-            <div class='pixel'></div>
+            <div onloaded="addClassSelected()" class='pixel'></div>
             <div class='pixel'></div>
             <div class='pixel'></div>
             <div class='pixel'></div>
