--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,22 +13,26 @@
       <h1 id="title">Paleta de Cores</h1>
     </header>
     <section id="color-palette">
-      <div class="color first">
+      <div class="color selected" id="first">
 
       </div>
-      <div class="color second">
+      <div class="color" id="second">
 
       </div>
-      <div class="color third">
+      <div class="color" id="third">
 
       </div>
-      <div class="color fourth">
+      <div class="color" id="fourth">
 
       </div>
     </section>
 
+    <section class="board-config">
+
+    </section>
+
     <section id="pixel-board">
-      
+
     </section>
   </main>
   <script src="./script.js"></script>
