--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">  
   <link rel="stylesheet" type="text/css" href="style.css"/>
-  <title>Document</title>
+  <title>Pixel Art</title>
 </head>
 <body>
   <h1 id="title">Paleta de Cores</h1>
 
   <div id="color-palette">
-    <ul></ul>
+    <!-- <ul></ul>
       <li class="name-colors">Black</li>
       <li class="name-colors">Siena Raw</li>
       <li class="name-colors">Lambreta</li>
-      <li class="name-colors">Tibre</li>
+      <li class="name-colors">Tibre</li> -->
   
     <div>
       <div class="color" id="color1"></div>
@@ -25,6 +25,46 @@
     </div>
   </div>
 
-  <script></script>
+  <div id="pixel-board"></div>
+    <div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+    </div>
+
+    <div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+    </div>
+
+    <div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+    </div>
+
+    <div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+    </div>
+
+    <div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+    </div>  
+  <script src= "script.js"></script>
 </body>
 </html>
