--- a/index.html
+++ b/index.html
@@ -14,14 +14,18 @@
 <body>
   <h1 id="title">Paleta de Cores</h1>
 
+  <p id="tamanho">Tamanho:</p>
+  <input type="text">
+
   <div id="color-palette">
-    <div class="color" id="black"></div>
-    <div class="color" id="magenta"></div>
-    <div class="color" id="violet"></div>
-    <div class="color" id="darkorchid"></div>
+    <div class="color" id="firstColor"></div>
+    <div class="color" id="secondColor"></div>
+    <div class="color" id="thirdColor"></div>
+    <div class="color" id="fourthColor"></div>
   </div>
 
   <button id="clear-board">Limpar</button>
+
 
   <div id="pixel-board">
     <div id="firstLine">
