--- a/index.html
+++ b/index.html
@@ -16,8 +16,48 @@
         <div class="color" id="green"></div>
         <div class="color" id="blue"></div>
     </div>
+    
+    <div id='pixel-board'>
+        <div class="pixel" id="colunas"></div>
+        <div class="pixel" id="colunas"></div>
+        <div class="pixel" id="colunas"></div>
+        <div class="pixel" id="colunas"></div>
+        <div class="pixel" id="colunas"></div>
+    </div>
+    <div id='pixel-board'>
+        <div class="pixel" id="colunas"></div>
+        <div class="pixel" id="colunas"></div>
+        <div class="pixel" id="colunas"></div>
+        <div class="pixel" id="colunas"></div>
+        <div class="pixel" id="colunas"></div>
+    </div>
+    <div id='pixel-board'>
+        <div class="pixel" id="colunas"></div>
+        <div class="pixel" id="colunas"></div>
+        <div class="pixel" id="colunas"></div>
+        <div class="pixel" id="colunas"></div>
+        <div class="pixel" id="colunas"></div>
+    </div>
+    <div id='pixel-board'>
+        <div class="pixel" id="colunas"></div>
+        <div class="pixel" id="colunas"></div>
+        <div class="pixel" id="colunas"></div>
+        <div class="pixel" id="colunas"></div>
+        <div class="pixel" id="colunas"></div>
+    </div>
+    <div id='pixel-board'>
+        <div class="pixel" id="colunas"></div>
+        <div class="pixel" id="colunas"></div>
+        <div class="pixel" id="colunas"></div>
+        <div class="pixel" id="colunas"></div>
+        <div class="pixel" id="colunas"></div>
+    </div>
+   
+   
+    <!-- <div id="pixel-board">
 
-        
+    </div> -->
+
     <script src="script.js"></script>
 </body>
 </html>
