--- a/index.html
+++ b/index.html
@@ -9,33 +9,17 @@
 </head>
 <body>
   <header>
-    <h1 id='title'> Paleta de Cores </h1>
+    <h1 id='title'> "Paleta de Cores" </h1>
   </header>
-  <main>
-    <div id ='color-palette'>
-        <div class='color1'></div>      
-        <div class='color2'></div>      
-        <div class='color3'></div>      
-        <div class='color4'></div>          
-    </div>
-
-  <!--   <section>
-      <h2></h2>
-      <input type="text" id="phrases-input" />
-      <button id="add-button">Adicionar frase</button>
-      <div>
-        <ul id="phrases-list">
-        </ul>
-      </div>
-    </section>
- -->  </main> 
+  
+ <div id="color-palette"> 
+  
+    <div class='color 1'></div>      
+    <div class='color 2'></div>      
+    <div class='color 3'></div>      
+    <div class='color 4'></div>          
+    
+</div>     
   <script src="script.js"></script>
 </body>
 </html>
-
-<!-- 2 - Adicione à página uma paleta contendo quatro cores distintas.
-A paleta de cores deve ser um elemento com id denominado color-palette, ao passo que cada cor individual contida na paleta de cores deve possuir a classe color;
-A cor de fundo de cada elemento da paleta deverá ser a cor que o elemento representa. A única cor não permitida na paleta é a cor branca.;
-Cada elemento da paleta de cores deverá ter uma borda preta, sólida e com 1 pixel de largura;
-A paleta de cores deverá listar todas as cores disponíveis para utilização lado a lado, e deverá ser posicionada abaixo do título "Paleta de Cores";
-A paleta de cores não deve conter cores repetidas. -->
