--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <div id="color-palette">
     </div>
     
-    <div id="pixel-board"></div>
+    <div id="pixel-board">
+    </div>
+    
 
 
   </main>
