--- a/index.html
+++ b/index.html
@@ -12,14 +12,80 @@
     <h1 id='title'> "Paleta de Cores" </h1>
   </header>
   
- <div id="color-palette"> 
+<section id="color-palette"> 
+    <div class='color'></div>      
+    <div class='color'></div>      
+    <div class='color'></div>      
+    <div class='color'></div>          
+</section> 
+
+<section id='pixel-board'>
+
+  <div class='line'> 
+      <div class='pixel'></div>      
+      <div class='pixel'></div>      
+      <div class='pixel'></div>      
+      <div class='pixel'></div> 
+      <div class='pixel'></div> 
+  </div>
   
-    <div class='color 1'></div>      
-    <div class='color 2'></div>      
-    <div class='color 3'></div>      
-    <div class='color 4'></div>          
-    
-</div>     
-  <script src="script.js"></script>
+  <div class='line'> 
+    <div class="cell"> 
+      <div class='pixel'></div>      
+      <div class='pixel'></div>      
+      <div class='pixel'></div>      
+      <div class='pixel'></div> 
+      <div class='pixel'></div> 
+    </div>
+  </div>
+
+  <div class='line'> 
+    <div class="cell"> 
+      <div class='pixel'></div>      
+      <div class='pixel'></div>      
+      <div class='pixel'></div>      
+      <div class='pixel'></div> 
+      <div class='pixel'></div> 
+    </div>
+  </div>
+
+  <div class='line'> 
+    <div class="cell"> 
+      <div class='pixel'></div>      
+      <div class='pixel'></div>      
+      <div class='pixel'></div>      
+      <div class='pixel'></div> 
+      <div class='pixel'></div> 
+    </div>
+  </div>
+
+  <div class='line'> 
+    <div class="cell"> 
+      <div class='pixel'></div>      
+      <div class='pixel'></div>      
+      <div class='pixel'></div>      
+      <div class='pixel'></div> 
+      <div class='pixel'></div> 
+    </div>
+  </div>
+
+</section>
+
+
+
+
+
+
+
+<script src="script.js"></script>
 </body>
 </html>
+
+<!-- Adicione à página um quadro de pixels, com 25 pixels.
+O quadro de "pixels" deve ter 5 elementos de largura e 5 elementos de comprimento;
+
+O quadro de "pixels" deve possuir o id denominado pixel-board, ao passo que cada "pixel" individual dentro do quadro deve possuir a classe denominada pixel;
+
+A cor inicial dos "pixels" dentro do quadro, ao abrir a página, deve ser branca;
+
+O quadro de "pixels" deve aparecer abaixo da paleta de cores. -->
