--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
     <div class="color color2"></div>
     <div class="color color3"></div>
   </div>
+  <div>
+    <button id="clear-board">Limpar</button>
+  </div>
+  <div><input id="board-size" type="number" min="1">
+  <button id="generate-board">VQV</button></div>
  <div id="pixel-board">
-   <div class="line"></div>
-   <div class="line"></div>
-   <div class="line"></div>
-   <div class="line"></div>
-   <div class="line"></div>
+ 
+
  </div>
 
  <script src="script.js"></script>
