--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 
     <button id="clear-board">Limpar</button>
 
+    <input type="number" min="1" max="50" id="board-size">
+    <button id="generate-board">VQV</button>
+
     <div id="pixel-board">
       <div class="board-line">
         <div class="pixel"></div>
