--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
       <div class="color"></div>
     </div>
 
+    <button id="clear-board">Limpar</button>
+
     <div id="pixel-board"></div>
   </main>
   <script src="script.js"></script>
