--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <button id="clear-board">Limpar</button>
 
-    <input type="number" min="1" max="50" id="board-size">
+    <input type="number" min="1" id="board-size">
     <button id="generate-board">VQV</button>
 
     <div id="pixel-board">
