--- a/index.html
+++ b/index.html
@@ -19,8 +19,13 @@
         <div  id='purple' class='color width-and-height'> </div>
 
     </section>
+    <main>
+        <section id="pixel-board">
+
+        </section>
 
 
+    </main>
 <script src = "script.js"></Script>  
 </body>
 
