--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <li class="name-colors">Tibre</li> -->
   
     <div>
-      <div class="color" id="color1"></div>
+      <div class="color selected"  id="color1" ></div>
       <div class="color" id="color2"></div>
       <div class="color" id="color3"></div>
       <div class="color" id="color4"></div>
@@ -26,7 +26,7 @@
   </div>
 
   <div id="pixel-board"></div>
-    <div>
+    <div class="line">
       <div class="pixel"></div>
       <div class="pixel"></div>
       <div class="pixel"></div>
@@ -34,7 +34,7 @@
       <div class="pixel"></div>
     </div>
 
-    <div>
+    <div class="line">
       <div class="pixel"></div>
       <div class="pixel"></div>
       <div class="pixel"></div>
@@ -42,7 +42,7 @@
       <div class="pixel"></div>
     </div>
 
-    <div>
+    <div class="line">
       <div class="pixel"></div>
       <div class="pixel"></div>
       <div class="pixel"></div>
@@ -50,7 +50,7 @@
       <div class="pixel"></div>
     </div>
 
-    <div>
+    <div class="line">
       <div class="pixel"></div>
       <div class="pixel"></div>
       <div class="pixel"></div>
@@ -58,7 +58,7 @@
       <div class="pixel"></div>
     </div>
 
-    <div>
+    <div class="line">
       <div class="pixel"></div>
       <div class="pixel"></div>
       <div class="pixel"></div>
