--- a/index.html
+++ b/index.html
@@ -11,5 +11,13 @@
     <header>
         <h1 id="title">Paleta de Cores</h1>
     </header>
+
+    <main>
+        <section>
+            <div id="color-palette">
+            </div>
+        </section>
+    </main>
+    <script src="script.js"></script>
 </body>
 </html>
