--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
 </head>
 <body>
     <div id="color-palette">
-        <div id="paleta1" class="color"></div>
+        <div id="paleta1" class="color selected"></div>
         <div id="paleta2" class="color"></div>
         <div id="paleta3" class="color"></div>
         <div id="paleta4" class="color"></div>
     </div>
+    <div id="button">
+        <button id="clear-board">Limpar</button>
+    </div>
     <div id= "pixel-board">
-
     </div>
     
     <script src="script.js"></script>
