--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1 id="title">Paleta de Cores</h1>
 
     <div id="color-palette">
-      <div class="color colorBlack selected"></div>
+      <div class="color colorBlack"></div>
       <div class="color colorBlue"></div>
       <div class="color colorRed"></div>
       <div class="color colorGreen"></div>
@@ -49,6 +49,7 @@
     </div>
   </main>
 
+  <script src="script"></script>
 </body>
 
 </html>
