--- a/index.html
+++ b/index.html
@@ -5,24 +5,24 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pixels Art - Bruno Marques</title>
-  <link type="text/css" rel="stylesheet" href="./style.css" >
+  <link type="text/css" rel="stylesheet" href="./style.css" />
 </head>
 <body>
-  <main>
-  <h1 id="title"> Paleta de Cores</h1>
+  <header> <h1 id="title"> Paleta de Cores</h1> </header>
   <nav class="color-pallete">
-  <div id="color-palette">
-    <div id="cor1" class="color">  </div>
-    <div id="cor2" class="color">  </div>
-    <div id="cor3" class="color">  </div>
-    <div id="cor4" class="color">  </div>
-  </div>
-  </nav>
-
-    <section class="game-board">
+    <div id="color-palette">
+      <div id="cor1" class="color">  </div>
+      <div id="cor2" class="color">  </div>
+      <div id="cor3" class="color">  </div>
+      <div id="cor4" class="color">  </div>
+    </div>
+    </nav>
+  <main>
+     <section id='pixel-board' class='game-board'>
 
 
     </section>
 </main>
+<script src="./script.js" />
 </body>
 </html>
