--- a/index.html
+++ b/index.html
@@ -15,9 +15,12 @@
       <div class="color orange"></div>
       <div class="color blue"></div>
     </div>
-    <button id='clear-board'> Limpar</button>
 
-    <div id=pixel-board ></div>  
+    <button id='clear-board'> Limpar</button>
+    <button id='generate-board'>VQV</button>
+    <input id="board-size" type="number"  min="1" max="50"> 
+
+    <div id=pixel-board></div>  
 
   
 
