Requisitos 10 e 11 Lint OK

--- a/index.html
+++ b/index.html
@@ -7,19 +7,21 @@
   </head>
   <body>
     <h1 id="title">Paleta de Cores</h1>
-    <section id="color-palette">
-      <button class="color"></button>
-      <button class="color"></button>
-      <button class="color"></button>
-      <button class="color"></button>
-    </section>
+  </div>
+  <section id="color-palette">
+    <button class="color"></button>
+    <button class="color"></button>
+    <button class="color"></button>
+    <button class="color"></button>
+  </section>
+  <h3>Escolha o tamanho de sua tela!</h3>
+  <h4>Por padrão a tela tem 5x5 de tamanho, mas caso deseje uma tela maior, digite o tamanho abaixo:</h4>
+  <h5>Obs: tamanho mínimo 5 e máximo 50</h5>
+  <div>
+  <input type="number" min="1" max="50" id="board-size" placeholder="Novo tamanho entre 5 e 50">
+  <button id="generate-board">VQV</button><br>
     <button id="clear-board">Limpar</button>
     <div id="pixel-board" class="nda">
-      <section class="line"></section>
-      <section class="line"></section>
-      <section class="line"></section>
-      <section class="line"></section>
-      <section class="line"></section>
     </div>
     <script src="script.js"></script>
   </body>
