--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div id="color-palette">
       <div class="color colorBlack"></div>
-      <div class="color colorBlue"></div>
+      <div class="color colorBlue" ></div>
       <div class="color colorRed"></div>
       <div class="color colorGreen"></div>
     </div>
@@ -49,7 +49,7 @@
     </div>
   </main>
 
-  <script src="script"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
