--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Pixel-Art</title>
 </head>
 <body>
+  <div class="header"> 
     <h1 id='title'>Paleta de Cores</h1>
   <div id='color-palette'>
     <div class="color black selected"></div>
@@ -14,15 +15,16 @@
     <div class="color color2"></div>
     <div class="color color3"></div>
   </div>
-  <div>
+  <div class="menu">
     <button id="clear-board">Limpar</button>
+    <input id="board-size" type="number" min="1" placeholder="Choose board size(5-50)">
+    <button id="generate-board">VQV</button></div>
   </div>
-  <div><input id="board-size" type="number" min="1">
-  <button id="generate-board">VQV</button></div>
  <div id="pixel-board">
- 
-
  </div>
+ <footer>
+   <p>Desenvolvido por Bruno Melo</p>
+ </footer>
 
  <script src="script.js"></script>
 </body>
