--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
       <div class="color"></div>
     </div>
 
+    <input type="number" id="board-size" min="1">
+    <button id="generate-board">VQV</button>
     <button id="clear-board">Limpar</button>
 
     <div id="pixel-board"></div>
