--- a/index.html
+++ b/index.html
@@ -8,16 +8,21 @@
     <title>Paleta de Cores - Project</title>
 </head>
 <body>
-    <header>
-        <h1 id="title">Paleta de Cores</h1>
-    </header>
 
-    <main>
-        <section>
-            <div id="color-palette">
-            </div>
-        </section>
-    </main>
-    <script src="script.js"></script>
+<header>
+    <h1 id="title">Paleta de Cores</h1>
+</header>
+<main>
+    <section>
+        <div id="color-palette"></div> 
+    </section>
+
+    <section>
+        <div id="pixel-board"></div>
+    </section>
+</main>
+
+<script src="script.js"></script>
+
 </body>
 </html>
